# monopoly

./: .gitignore  Cargo.toml  README.md  build_ghpage.sh  stats.sh  tui.sh  wasm.sh
.cargo/: config.toml
.github/ghpage/: index.html  main.js  monopoly_wasm.js  monopoly_wasm_bg.wasm  styles.css  worker.js
monopoly-calc/: .gitignore  Cargo.toml
monopoly-calc/src/: cli.rs  console.rs  csv.rs  main.rs  matrix.rs  sheet.rs
monopoly-lib/: Cargo.toml
monopoly-lib/src/: chance.rs  commchest.rs  lib.rs  movereason.rs  space.rs  strategy.rs
monopoly-lib/src/calc/: dice.rs  mod.rs  state.rs  transmatrix.rs
monopoly-lib/src/calc/probability/: mod.rs  tests.rs
monopoly-lib/src/sim/: mod.rs  movereason.rs  tests.rs
monopoly-tui/: Cargo.toml
monopoly-tui/src/: cli.rs  main.rs
monopoly-wasm/: .gitignore  Build.sh  BuildSingle.sh  Cargo.toml  index.htm  main.js  styles.css  worker.js
monopoly-wasm/package/: Cargo.toml
monopoly-wasm/package/src/: main.rs  multi.rs  single.rs
monopoly-wasm/src/: lib.rs
monopoly-wasm/template/: board.css  index.htm  main.js  styles.css  worker.js
