[package]
name = "monopoly-calc"
version = "0.1.0"
edition = "2024"
description = "Dump calculated Monopoly probability matrices to XLS/CSV"

[dependencies]
monopoly-lib = { path = "../monopoly-lib" }
nalgebra = "0.33.2"
num-traits = "0.2.19"
num-derive = "0.4.2"
clap = { version = "4.3.3", features = ["derive"] }
rust_xlsxwriter = "0.80.0"
