[package]
name = "monopoly-lib"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Ward (andy.ward.uk@gmail.com)"]
description = "Monopoly probablility library"

[dependencies]
rand = "0.8.5"
num-traits = "0.2.19"
num-derive = "0.4.2"
strum = { version = "0.26", features = ["derive"] }
nalgebra = "0.33.2"
itertools = "0.14.0"
