[package]
name = "monopoly-tui"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Ward (andy.ward.uk@gmail.com)"]
description = "Monopoly probability console application"

[dependencies]
monopoly-lib = { path = "../monopoly-lib" }
crossterm = "0.28.1"
rand = "0.8.5"
numformat = { git = "https://github.com/andywarduk/numformat.git" }
num-traits = "0.2.19"
num-derive = "0.4.2"
clap = { version = "4.3.3", features = ["derive"] }
