[package]
name = "monopoly-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Ward (andy.ward.uk@gmail.com)"]
description = "Monopoly probability WASM web application"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
monopoly-lib = { path = "../monopoly-lib" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
strum = { version = "0.26", features = ["derive"] }
